integration_tests/codegen_fail/fail/union/derive_same_type.rs
#[derive(juniper::GraphQLUnion)]
enum Character {
    A(std::string::String),
    B(String),
}

fn main() {}
