integration_tests/codegen_fail/fail/union/derive_same_type.stderr
error[E0119]: conflicting implementations of trait `std::convert::From<std::string::String>` for type `Character`:
 --> $DIR/derive_same_type.rs:1:10
  |
1 | #[derive(juniper::GraphQLUnion)]
  |          ^^^^^^^^^^^^^^^^^^^^^
  |          |
  |          first implementation here
  |          conflicting implementation for `Character`
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
